# DeckBuilderPro

./: .gitignore  CMakeLists.txt  CMakeLists.txt~RF97ef29cd.TMP  Card.cpp  Card.h  CardLoader.cpp  CardLoader.h  GameManager.cpp  GameManager.h  Main.qml  Player.cpp  Player.h  cards.json  gamemanager.cpp  gamemanager.h  main.cpp  resources.qrc
